# GooBalls

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindJsoncpp.cmake
examples/scenes/: barus_effect.json  crashing_boxes.json  double_falling_box.json  falling_box.json  falling_boxes.json  floor_crashing_boxes.json  fluid_only.json  merge_collision.json  rigid_body_densities.json  rigid_body_densitites.json  scene0.json  single_falling_box.json  split_connections.json  squish_blob.json  static_scene_with_funnel.json  sticky_roof.json  sticky_wall.json  viscosity_ramp.json  wall_collision.json  waterfall.json  weakening_connections.json  world_border.json
scripts/: benchmark_scenes.py
src/GooBallsApp/: CMakeLists.txt  cli_options.cpp  cli_options.hpp  game_controller.cpp  game_controller.hpp  main.cpp  placeholder.cpp  placeholder.hpp  test_root.cc
src/GooBallsApp/scenes/: test.json  test_json_parser  test_json_parser.cpp
src/GooBallsApp/styler/: no_style.cpp  no_style.hpp  pressure_density.cpp  pressure_density.hpp  styler.cpp  styler.hpp
src/GooBallsApp/ui/: ui.cpp  ui.h
src/benchmark_neighborhood/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  test_root.cc
src/lib/generic/: eigen.hpp  hello.cpp  hello.hpp  hello.test.cc  is_finite.hpp  types.hpp
src/lib/loader/: scene_loader.cpp  scene_loader.hpp  scene_loader.test.cc
src/lib/observing/: abstractDelayedObserver.cpp  abstractDelayedObserver.hpp  abstractObserver.cpp  abstractObserver.hpp  abstractSubject.cpp  abstractSubject.hpp  abstractSubject.test.cc  interfaces.hpp
src/lib/physics/2d/: abstract_sph.cpp  abstract_sph.hpp  box2dmessages.cpp  box2dmessages.hpp  engine.cpp  engine.hpp  engine.test.cc  fluid.cpp  fluid.hpp  fluid_solver.cpp  fluid_solver.hpp  iisph.cpp  iisph.hpp  kernel.hpp  kernel_debrun_spiky.cpp  kernel_debrun_spiky.hpp  kernel_debrun_spiky.test.cc  kernel_divergent_viscosity.cpp  kernel_divergent_viscosity.hpp  kernel_divergent_viscosity.test.cc  kernel_poly6.cpp  kernel_poly6.hpp  kernel_poly6.test.cc  kernel_poly_viscosity.cpp  kernel_poly_viscosity.hpp  kernel_poly_viscosity.test.cc  kernel_test.cc  kernel_test.hpp  kernel_viscosity.cpp  kernel_viscosity.hpp  kernel_viscosity.test.cc  mesh.cpp  mesh.hpp  message.cpp  no_sph.cpp  no_sph.hpp  observer.hpp  pick_rows.hpp  recommended_timestep.cpp  recommended_timestep.hpp  (+9 more)
src/lib/rendering/2d/: disk_fluid.cpp  disk_fluid.hpp  engine.cpp  engine.hpp  fluid.cpp  fluid.hpp  mesh.cpp  mesh.hpp  opengl_render.cpp  opengl_render.hpp  render.hpp  render_engine.cpp  render_engine.hpp  render_scene.cpp  render_scene.hpp  renderable.hpp  scene.cpp  scene.hpp  types.hpp
src/lib/rendering/2d/shaders/: particle.frag  particle.geom  particle.vert
src/lib/spatial/2d/: convex_hull.cpp  convex_hull.hpp  convex_hull.test.cc  neighborhood.cpp  neighborhood.hpp  neighborhood_brute_force.cpp  neighborhood_brute_force.hpp  neighborhood_brute_force.test.cc  neighborhood_spatial_hashing.cpp  neighborhood_spatial_hashing.hpp  neighborhood_spatial_hashing.test.cc  types.hpp
